--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 body {
     background-color: hsl(30, 38%, 92%);
 }
+main {
+    display: flex;
+}
 .container {
     display: flex;
     flex-direction: column;
